--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,4 @@
+<!--
 ---
 layout: default
 disqus: false
@@ -15,11 +16,11 @@ post_class: post-template
         {% assign author = site.authors[page.author] %}
         
 		<div class="col-sm-8">
-            <!-- Post Featured Image 
+            <!-- Post Featured Image -->  
 			{% if page.image %}<img class="featured-image img-fluid rounded" src="{{ site.baseurl }}/{{ page.image }}" alt="{{ page.title }}">{% endif %}
 			<!-- End Featured Image -->
 			<div class="mainheading">             
-             -->  
+             
                 <!-- Post Categories -->
                 <div class="after-post-tags">
                     <ul class="tags">
@@ -117,3 +118,4 @@ post_class: post-template
 
 <!-- End Article
 ================================================== -->
+-->  
